<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>triangle.tools</groupId>
    <artifactId>triangle-tools</artifactId>
    <version>2.1</version>
    <packaging>pom</packaging>
    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <modules>
        <module>Triangle.AbstractMachine</module>
        <module>Triangle.Compiler</module>
        <module>Triangle.AbstractMachine.Disassembler</module>
        <module>Triangle.AbstractMachine.Interpreter</module>
    </modules>
</project>